Fixed footer bugs on small screens Fixes #90 (#96)
* Change section-header background-image for darker

Change section-header background-image for darker to add contrast and make white text readable.

* Fixed dark layer

Changed image for previous one and added dark semi-transparent layer in code.

* Fixing footer bugs on small screens

Fixed:
 - email displaying on tablet screens, email address was going outside of the website
 - social media icons, now it displays correctly on small devices like phones

* Final fixes

--- a/css/custom.css
+++ b/css/custom.css
@@ -82,6 +82,7 @@
 }
 .social-profiles a i{
   transition: all .5s;
+  line-height: 70px;
 }
 .social-profiles a:hover i{
   color: grey;
@@ -115,4 +116,43 @@
 
 #overlay{
   padding: 0
+}
+/*END*/
+
+/* media queries to display social icons in footer properly*/
+@media (max-width: 768px) {
+  .social-profiles li a i {
+    position: absolute;
+  }
+  .social_twitter {
+    top: 0;
+    left: 15%;
+  }
+  .social_facebook {
+    top: 0;
+    left: 35%;
+  }
+  .social_linkedin {
+    top: 0;
+    left: 55%;
+  }
+  .social_youtube {
+    top: 0;
+    left: 75%;
+  }
+  .social_flickr {
+    top: 100%;
+    left: 20%;
+    margin-top: 40px;
+  }
+  .social_instagram {
+    top: 100%;
+    left: 45%;
+    margin-top: 40px;
+  }
+  .fa-github {
+    top: 100%;
+    left: 70%;
+    margin-top: 40px;
+  }
 }
